@@ -26,7 +26,7 @@ import static java.util.stream.Collectors.toMap;
 import static jdk.internal.util.OperatingSystem.LINUX;
 import static jdk.internal.util.OperatingSystem.MACOS;
 import static jdk.internal.util.OperatingSystem.WINDOWS;
-import static jdk.jpackage.internal.util.function.ThrowingFunction.toFunction;
+import static jdk.jpackage.internal.util.function.ThrowingSupplier.toSupplier;
 import static jdk.jpackage.test.JPackageCommand.makeAdvice;
 import static jdk.jpackage.test.JPackageCommand.makeError;
 
@@ -43,7 +43,9 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.function.UnaryOperator;
 import java.util.regex.Pattern;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
+import jdk.internal.util.OperatingSystem;
 import jdk.jpackage.internal.util.TokenReplace;
 import jdk.jpackage.test.Annotations.Parameter;
 import jdk.jpackage.test.Annotations.ParameterSupplier;
@@ -51,15 +53,28 @@ import jdk.jpackage.test.Annotations.Test;
 import jdk.jpackage.test.CannedArgument;
 import jdk.jpackage.test.CannedFormattedString;
 import jdk.jpackage.test.JPackageCommand;
-import jdk.jpackage.test.JPackageStringBundle;
+import jdk.jpackage.test.JPackageOutputValidator;
+import jdk.jpackage.test.MacSign;
+import jdk.jpackage.test.MacSign.CertificateRequest;
+import jdk.jpackage.test.MacSign.CertificateType;
+import jdk.jpackage.test.MacSign.KeychainWithCertsSpec;
+import jdk.jpackage.test.MacSign.ResolvedKeychain;
+import jdk.jpackage.test.MacSign.StandardCertificateNamePrefix;
 import jdk.jpackage.test.PackageType;
 import jdk.jpackage.test.TKit;
+import jdk.jpackage.test.mock.Script;
+import jdk.jpackage.test.mock.VerbatimCommandMock;
+import jdk.jpackage.test.stdmock.JPackageMockUtils;
+import jdk.jpackage.test.stdmock.MacSignMockUtils;
 
 /*
  * @test
  * @summary Test jpackage output for erroneous input
  * @library /test/jdk/tools/jpackage/helpers
+ * @library /test/lib
  * @build jdk.jpackage.test.*
+ * @build jdk.jpackage.test.stdmock.*
+ * @build jdk.test.lib.security.CertificateBuilder
  * @compile -Xlint:all -Werror ErrorTest.java
  * @run main/othervm/timeout=720 -Xmx512m jdk.jpackage.test.Main
  *  --jpt-run=ErrorTest
@@ -70,7 +85,10 @@ import jdk.jpackage.test.TKit;
  * @test
  * @summary Test jpackage output for erroneous input
  * @library /test/jdk/tools/jpackage/helpers
+ * @library /test/lib
  * @build jdk.jpackage.test.*
+ * @build jdk.jpackage.test.stdmock.*
+ * @build jdk.test.lib.security.CertificateBuilder
  * @compile -Xlint:all -Werror ErrorTest.java
  * @run main/othervm/timeout=720 -Xmx512m jdk.jpackage.test.Main
  *  --jpt-run=ErrorTest
@@ -80,10 +98,10 @@ import jdk.jpackage.test.TKit;
 public final class ErrorTest {
 
     enum Token {
-        JAVA_HOME(cmd -> {
+        JAVA_HOME(() -> {
             return System.getProperty("java.home");
         }),
-        APP_IMAGE(cmd -> {
+        APP_IMAGE(() -> {
             final var appImageRoot = TKit.createTempDirectory("appimage");
 
             final var appImageCmd = JPackageCommand.helloAppImage()
@@ -91,28 +109,44 @@ public final class ErrorTest {
 
             appImageCmd.execute();
 
-            return appImageCmd.outputBundle().toString();
+            return appImageCmd.outputBundle();
         }),
-        INVALID_MAC_RUNTIME_BUNDLE(toFunction(cmd -> {
+        APP_IMAGE_WITH_SHORT_NAME(() -> {
+            final var appImageRoot = TKit.createTempDirectory("appimage");
+
+            final var appImageCmd = JPackageCommand.helloAppImage()
+                    .setFakeRuntime().setArgumentValue("--dest", appImageRoot);
+
+            // Let jpackage pick the name from the main class (Hello). It qualifies as the "short" name.
+            appImageCmd.removeArgumentWithValue("--name");
+
+            appImageCmd.execute();
+
+            return appImageCmd.outputBundle();
+        }),
+        INVALID_MAC_RUNTIME_BUNDLE(toSupplier(() -> {
             // Has "Contents/MacOS/libjli.dylib", but missing "Contents/Home/lib/libjli.dylib".
             final Path root = TKit.createTempDirectory("mac-invalid-runtime-bundle");
             Files.createDirectories(root.resolve("Contents/Home"));
             Files.createFile(root.resolve("Contents/Info.plist"));
             Files.createDirectories(root.resolve("Contents/MacOS"));
             Files.createFile(root.resolve("Contents/MacOS/libjli.dylib"));
-            return root.toString();
+            return root;
         })),
-        INVALID_MAC_RUNTIME_IMAGE(toFunction(cmd -> {
+        INVALID_MAC_RUNTIME_IMAGE(toSupplier(() -> {
             // Has some files in the "lib" subdirectory, but doesn't have the "lib/libjli.dylib" file.
             final Path root = TKit.createTempDirectory("mac-invalid-runtime-image");
             Files.createDirectories(root.resolve("lib"));
             Files.createFile(root.resolve("lib/foo"));
-            return root.toString();
+            return root;
         })),
-        EMPTY_DIR(toFunction(cmd -> {
+        EMPTY_DIR(() -> {
             return TKit.createTempDirectory("empty-dir");
-        })),
+        }),
         ADD_LAUNCHER_PROPERTY_FILE,
+        EMPTY_KEYCHAIN,
+        KEYCHAIN_WITH_APP_IMAGE_CERT,
+        KEYCHAIN_WITH_PKG_CERT,
         ;
 
         private Token() {
@@ -121,6 +155,12 @@ public final class ErrorTest {
 
         private Token(Function<JPackageCommand, Object> valueSupplier) {
             this.valueSupplier = Optional.of(valueSupplier);
+        }
+
+        private Token(Supplier<Object> valueSupplier) {
+            this(_ -> {
+                return valueSupplier.get();
+            });
         }
 
         String token() {
@@ -202,10 +242,34 @@ public final class ErrorTest {
         private static final Optional<PackageType> NATIVE_TYPE = defaultNativeType();
     }
 
-    public record TestSpec(Optional<PackageTypeSpec> type, Optional<String> appDesc, List<String> addArgs,
-            List<String> removeArgs, List<CannedFormattedString> expectedMessages) {
+    public record TestSpec(
+            Optional<PackageTypeSpec> type,
+            Optional<String> appDesc,
+            List<String> addArgs,
+            List<String> removeArgs,
+            List<CannedFormattedString> expectedMessages,
+            boolean match) {
 
         static final class Builder {
+
+            Builder() {
+                type = new PackageTypeSpec(PackageType.IMAGE);
+                appDesc = DEFAULT_APP_DESC;
+                match = true;
+            }
+
+            Builder(Builder other) {
+                type = other.type;
+                appDesc = other.appDesc;
+                match = other.match;
+                addArgs.addAll(other.addArgs);
+                removeArgs.addAll(other.removeArgs);
+                expectedMessages.addAll(other.expectedMessages);
+            }
+
+            Builder copy() {
+                return new Builder(this);
+            }
 
             Builder type(PackageType v) {
                 type = Optional.ofNullable(v).map(PackageTypeSpec::new).orElse(null);
@@ -228,6 +292,19 @@ public final class ErrorTest {
 
             Builder noAppDesc() {
                 return appDesc(null);
+            }
+
+            Builder match(boolean v) {
+                match = v;
+                return this;
+            }
+
+            Builder match() {
+                return match(true);
+            }
+
+            Builder find() {
+                return match(false);
             }
 
             Builder setAddArgs(List<String> v) {
@@ -269,7 +346,8 @@ public final class ErrorTest {
             }
 
             Builder setMessages(List<CannedFormattedString> v) {
-                expectedMessages = v;
+                expectedMessages.clear();
+                expectedMessages.addAll(v);
                 return this;
             }
 
@@ -287,11 +365,11 @@ public final class ErrorTest {
             }
 
             Builder error(String key, Object ... args) {
-                return messages(makeError(JPackageStringBundle.MAIN.cannedFormattedString(key, args)));
+                return messages(makeError(key, args));
             }
 
             Builder advice(String key, Object ... args) {
-                return messages(makeAdvice(JPackageStringBundle.MAIN.cannedFormattedString(key, args)));
+                return messages(makeAdvice(key, args));
             }
 
             Builder invalidTypeArg(String arg, String... otherArgs) {
@@ -304,15 +382,21 @@ public final class ErrorTest {
             }
 
             TestSpec create() {
-                return new TestSpec(Optional.ofNullable(type), Optional.ofNullable(appDesc),
-                        List.copyOf(addArgs), List.copyOf(removeArgs), List.copyOf(expectedMessages));
+                return new TestSpec(
+                        Optional.ofNullable(type),
+                        Optional.ofNullable(appDesc),
+                        List.copyOf(addArgs),
+                        List.copyOf(removeArgs),
+                        List.copyOf(expectedMessages),
+                        match);
             }
 
-            private PackageTypeSpec type = new PackageTypeSpec(PackageType.IMAGE);
-            private String appDesc = DEFAULT_APP_DESC;
-            private List<String> addArgs = new ArrayList<>();
-            private List<String> removeArgs = new ArrayList<>();
-            private List<CannedFormattedString> expectedMessages = new ArrayList<>();
+            private PackageTypeSpec type;
+            private String appDesc;
+            private boolean match;
+            private final List<String> addArgs = new ArrayList<>();
+            private final List<String> removeArgs = new ArrayList<>();
+            private final List<CannedFormattedString> expectedMessages = new ArrayList<>();
         }
 
         public TestSpec {
@@ -360,12 +444,29 @@ public final class ErrorTest {
                 cmd.clearArguments().addArguments(newArgs);
             }
 
-            defaultInit(cmd, expectedMessages);
-            cmd.execute(1);
+            // Disable default logic adding `--verbose` option
+            // to jpackage command line.
+            // It will affect jpackage error messages if the command line is malformed.
+            cmd.ignoreDefaultVerbose(true);
+
+            // Ignore external runtime as it will interfere
+            // with jpackage arguments in this test.
+            cmd.ignoreDefaultRuntime(true);
+
+            var validator = new JPackageOutputValidator().stderr().expectMatchingStrings(expectedMessages).match(match);
+            if (match) {
+                new JPackageOutputValidator().stdout().validateEndOfStream().applyTo(cmd);
+            }
+
+            cmd.mutate(validator::applyTo).execute(1);
         }
 
         TestSpec mapExpectedMessages(UnaryOperator<CannedFormattedString> mapper) {
-            return new TestSpec(type, appDesc, addArgs, removeArgs, expectedMessages.stream().map(mapper).toList());
+            return new TestSpec(type, appDesc, addArgs, removeArgs, expectedMessages.stream().map(mapper).toList(), match);
+        }
+
+        TestSpec copyWithExpectedMessages(List<CannedFormattedString> expectedMessages) {
+            return new TestSpec(type, appDesc, addArgs, removeArgs, expectedMessages, match);
         }
 
         @Override
@@ -382,6 +483,9 @@ public final class ErrorTest {
             }
             if (!removeArgs.isEmpty()) {
                 sb.append("args-del=").append(removeArgs).append("; ");
+            }
+            if (!match) {
+                sb.append("find; ");
             }
             sb.append("errors=").append(expectedMessages);
             return sb.toString();
@@ -408,7 +512,7 @@ public final class ErrorTest {
                     .error("error.no-main-class-with-main-jar", "hello.jar")
                     .advice("error.no-main-class-with-main-jar.advice", "hello.jar"),
             // non-existent main jar
-            testSpec().addArgs("--main-jar", "non-existent.jar")
+            testSpec().addArgs("--main-jar", "non-existent.jar").find()
                     .error("error.main-jar-does-not-exist", "non-existent.jar"),
             // non-existent runtime
             testSpec().addArgs("--runtime-image", "non-existent.runtime")
@@ -448,7 +552,7 @@ public final class ErrorTest {
         createMutuallyExclusive(
                 new ArgumentGroup("--module", "foo.bar"),
                 new ArgumentGroup("--main-jar", "foo.jar")
-        ).map(TestSpec.Builder::noAppDesc).map(TestSpec.Builder::create).forEach(testCases::add);
+        ).map(TestSpec.Builder::noAppDesc).map(TestSpec.Builder::find).map(TestSpec.Builder::create).forEach(testCases::add);
 
         // forbidden jlink options
         testCases.addAll(Stream.of("--output", "--add-modules", "--module-path").map(opt -> {
@@ -493,13 +597,18 @@ public final class ErrorTest {
     }
 
     public static Collection<Object[]> invalidAppVersion() {
-        return fromTestSpecBuilders(Stream.of(
+        return toTestArgs(Stream.of(
                 // Invalid app version. Just cover all different error messages.
                 // Extensive testing of invalid version strings is done in DottedVersionTest unit test.
                 testSpec().addArgs("--app-version", "").error("error.version-string-empty"),
                 testSpec().addArgs("--app-version", "1.").error("error.version-string-zero-length-component", "1."),
                 testSpec().addArgs("--app-version", "1.b.3").error("error.version-string-invalid-component", "1.b.3", "b.3")
-        ));
+        ).map(builder -> {
+            if (TKit.isOSX()) {
+                builder.advice("error.invalid-cfbundle-version.advice");
+            };
+            return builder;
+        }));
     }
 
     @Test
@@ -531,11 +640,14 @@ public final class ErrorTest {
             argsStream = Stream.concat(argsStream, Stream.of(List.of("--win-console")));
         }
 
-        return fromTestSpecBuilders(argsStream.map(args -> {
-            return testSpec().noAppDesc().nativeType()
+        return toTestArgs(argsStream.map(args -> {
+            var builder = testSpec().noAppDesc().nativeType()
                     .addArgs("--runtime-image", Token.JAVA_HOME.token())
-                    .addArgs(args)
-                    .error("ERR_NoInstallerEntryPoint", args.getFirst());
+                    .addArgs(args);
+            if (args.contains("--add-modules")) {
+                builder.error("ERR_MutuallyExclusiveOptions", "--runtime-image", "--add-modules");
+            }
+            return builder.error("ERR_NoInstallerEntryPoint", args.getFirst());
         }));
     }
 
@@ -556,7 +668,7 @@ public final class ErrorTest {
     }
 
     public static Collection<Object[]> testAdditionLaunchers() {
-        return fromTestSpecBuilders(Stream.of(
+        return toTestArgs(Stream.of(
             testSpec().addArgs("--add-launcher", Token.ADD_LAUNCHER_PROPERTY_FILE.token())
                     .error("error.parameter-add-launcher-malformed", Token.ADD_LAUNCHER_PROPERTY_FILE, "--add-launcher"),
             testSpec().removeArgs("--name").addArgs("--name", "foo", "--add-launcher", "foo=" + Token.ADD_LAUNCHER_PROPERTY_FILE.token())
@@ -564,19 +676,201 @@ public final class ErrorTest {
         ));
     }
 
-    @Test
-    @ParameterSupplier("invalidNames")
-    public static void testInvalidAppName(String name) {
-        testSpec().removeArgs("--name").addArgs("--name", name)
-                .error("ERR_InvalidAppName", adjustTextStreamVerifierArg(name)).create().test();
+    @Test(ifOS = MACOS)
+    @ParameterSupplier
+    @ParameterSupplier("testMacPkgSignWithoutIdentity")
+    public static void testMacSignWithoutIdentity(TestSpec spec) {
+        // The test called JPackage Command.useToolProviderBy Default(),
+        // which alters global variables in the test library,
+        // so run the test case with a new global state to isolate the alteration of the globals.
+        TKit.withNewState(() -> {
+            testMacSignWithoutIdentityWithNewTKitState(spec);
+        });
+    }
+
+   private static void testMacSignWithoutIdentityWithNewTKitState(TestSpec spec) {
+        final Token keychainToken = spec.expectedMessages().stream().flatMap(cannedStr -> {
+            return Stream.of(cannedStr.args()).filter(Token.class::isInstance).map(Token.class::cast).filter(token -> {
+                switch (token) {
+                    case EMPTY_KEYCHAIN, KEYCHAIN_WITH_APP_IMAGE_CERT, KEYCHAIN_WITH_PKG_CERT -> {
+                        return true;
+                    }
+                    default -> {
+                        return false;
+                    }
+                }
+            });
+        }).distinct().reduce((a, b) -> {
+            throw new IllegalStateException(String.format(
+                    "Error messages %s reference multiple keychains: %s and %s", spec.expectedMessages(), a, b));
+        }).orElseThrow();
+
+        final ResolvedKeychain keychain;
+
+        switch (keychainToken) {
+            case EMPTY_KEYCHAIN -> {
+                keychain = new ResolvedKeychain(new KeychainWithCertsSpec(MacSign.createEmptyKeychain(), List.of()));
+            }
+            case KEYCHAIN_WITH_APP_IMAGE_CERT, KEYCHAIN_WITH_PKG_CERT -> {
+                CertificateType existingCertType;
+                switch (keychainToken) {
+                    case KEYCHAIN_WITH_APP_IMAGE_CERT -> {
+                        existingCertType = CertificateType.CODE_SIGN;
+                    }
+                    case KEYCHAIN_WITH_PKG_CERT -> {
+                        existingCertType = CertificateType.INSTALLER;
+                    }
+                    default -> {
+                        throw new AssertionError();
+                    }
+                }
+
+                keychain = Stream.of(SignEnvMock.SingleCertificateKeychain.values()).filter(k -> {
+                    return k.certificateType() == existingCertType;
+                }).findFirst().orElseThrow().keychain();
+
+                var script = Script.build()
+                        // Disable the mutation making mocks "run once".
+                        .commandMockBuilderMutator(null)
+                        // Replace "/usr/bin/security" with the mock bound to the keychain mock.
+                        .map(MacSignMockUtils.securityMock(SignEnvMock.VALUE))
+                        // Don't mock other external commands.
+                        .use(VerbatimCommandMock.INSTANCE)
+                        .createLoop();
+
+                // Create jpackage tool provider using the /usr/bin/security mock.
+                var jpackage = JPackageMockUtils.createJPackageToolProvider(OperatingSystem.MACOS, script);
+
+                // Override the default jpackage tool provider with the one using the /usr/bin/security mock.
+                JPackageCommand.useToolProviderByDefault(jpackage);
+            }
+            default -> {
+                throw new AssertionError();
+            }
+        }
+
+        MacSign.withKeychain(_ -> {
+            spec.mapExpectedMessages(cannedStr -> {
+                return cannedStr.mapArgs(arg -> {
+                    switch (arg) {
+                        case StandardCertificateNamePrefix certPrefix -> {
+                            return certPrefix.value();
+                        }
+                        case Token _ -> {
+                            return keychain.name();
+                        }
+                        default -> {
+                            return arg;
+                        }
+                    }
+                });
+            }).test(Map.of(keychainToken, _ -> keychain.name()));
+        }, keychain);
+    }
+
+    public static Collection<Object[]> testMacSignWithoutIdentity() {
+        final List<TestSpec> testCases = new ArrayList<>();
+
+        final var signArgs = List.of("--mac-sign", "--mac-signing-keychain", Token.EMPTY_KEYCHAIN.token());
+        final var appImageArgs = List.of("--app-image", Token.APP_IMAGE_WITH_SHORT_NAME.token());
+
+        for (var withAppImage : List.of(true, false)) {
+            var builder = testSpec();
+            if (withAppImage) {
+                builder.noAppDesc().addArgs(appImageArgs);
+            }
+            builder.addArgs(signArgs);
+
+            for (var type: List.of(PackageType.IMAGE, PackageType.MAC_PKG, PackageType.MAC_DMG)) {
+                builder.setMessages().error("error.cert.not.found",
+                        MacSign.StandardCertificateNamePrefix.CODE_SIGN, Token.EMPTY_KEYCHAIN);
+                switch (type) {
+                    case MAC_PKG -> {
+                        // jpackage must report two errors:
+                        //  1. It can't find signing identity to sign the app image
+                        //  2. It can't find signing identity to sign the PKG installer
+                        builder.error("error.cert.not.found",
+                                MacSign.StandardCertificateNamePrefix.INSTALLER, Token.EMPTY_KEYCHAIN);
+                    }
+                    default -> {
+                        // NOP
+                    }
+                }
+                var testSpec = builder.type(type).create();
+                testCases.add(testSpec);
+            }
+        }
+
+        return toTestArgs(testCases);
+    }
+
+    public static Collection<Object[]> testMacPkgSignWithoutIdentity() {
+        final List<TestSpec.Builder> testCases = new ArrayList<>();
+
+        final var appImageArgs = List.of("--app-image", Token.APP_IMAGE_WITH_SHORT_NAME.token());
+
+        for (var withAppImage : List.of(true, false)) {
+            for (var existingCertType : CertificateType.values()) {
+                Token keychain;
+                StandardCertificateNamePrefix missingCertificateNamePrefix;
+                switch (existingCertType) {
+                    case INSTALLER -> {
+                        keychain = Token.KEYCHAIN_WITH_PKG_CERT;
+                        missingCertificateNamePrefix = StandardCertificateNamePrefix.CODE_SIGN;
+                    }
+                    case CODE_SIGN -> {
+                        keychain = Token.KEYCHAIN_WITH_APP_IMAGE_CERT;
+                        missingCertificateNamePrefix = StandardCertificateNamePrefix.INSTALLER;
+                    }
+                    default -> {
+                        throw new AssertionError();
+                    }
+                }
+
+                var builder = testSpec()
+                        .type(PackageType.MAC_PKG)
+                        .addArgs("--mac-sign", "--mac-signing-keychain", keychain.token())
+                        .error("error.cert.not.found", missingCertificateNamePrefix, keychain);
+
+                if (withAppImage) {
+                    builder.noAppDesc().addArgs(appImageArgs);
+                } else {
+                    /*
+                     * Use shorter name to avoid
+                     *
+                     * [03:08:55.623] --mac-package-name is set to 'MacSignWithoutIdentityErrorTest', which is longer than 16 characters. For a better Mac experience consider shortening it.
+                     *
+                     * in the output.
+                     * The same idea is behind using the "APP_IMAGE_WITH_SHORT_NAME" token
+                     * instead of the "APP_IMAGE" for the predefined app image.
+                     */
+                    builder.removeArgs("--name");
+                }
+
+                testCases.add(builder);
+            }
+        }
+
+        return toTestArgs(testCases);
     }
 
     @Test
     @ParameterSupplier("invalidNames")
-    public static void testInvalidAddLauncherName(String name) {
+    public static void testInvalidAppName(InvalidName name) {
+        testSpec().removeArgs("--name").addArgs("--name", name.value())
+                .error("ERR_InvalidAppName", adjustTextStreamVerifierArg(name.value()))
+                .match(!name.isMessingUpConsoleOutput())
+                .create()
+                .test();
+    }
+
+    @Test
+    @ParameterSupplier("invalidNames")
+    public static void testInvalidAddLauncherName(InvalidName name) {
         testAdditionLaunchers(testSpec()
                 .addArgs("--add-launcher", name + "=" + Token.ADD_LAUNCHER_PROPERTY_FILE.token())
-                .error("ERR_InvalidSLName", adjustTextStreamVerifierArg(name))
+                .error("ERR_InvalidSLName", adjustTextStreamVerifierArg(name.value()))
+                .match(!name.isMessingUpConsoleOutput())
                 .create());
     }
 
@@ -586,7 +880,27 @@ public final class ErrorTest {
         if (TKit.isWindows()) {
             data.add("foo\\bar");
         }
-        return toTestArgs(data.stream());
+        return toTestArgs(data.stream().map(InvalidName::new));
+    }
+
+    record InvalidName(String value) {
+        InvalidName {
+            Objects.requireNonNull(value);
+        }
+
+        boolean isMessingUpConsoleOutput() {
+            var controlChars = "\r\n\t".codePoints().toArray();
+            return value.codePoints().anyMatch(cp -> {
+                return IntStream.of(controlChars).anyMatch(v -> {
+                    return v == cp;
+                });
+            });
+        }
+
+        @Override
+        public String toString() {
+            return value;
+        }
     }
 
     public static Collection<Object[]> testWindows() {
@@ -640,7 +954,8 @@ public final class ErrorTest {
                 testSpec().noAppDesc().addArgs("--app-image", Token.APP_IMAGE.token())
                         .error("error.app-image.mac-sign.required"),
                 testSpec().type(PackageType.MAC_PKG).addArgs("--mac-package-identifier", "#1")
-                        .error("message.invalid-identifier", "#1"),
+                        .error("message.invalid-identifier", "#1")
+                        .advice("message.invalid-identifier.advice"),
                 // Bundle for mac app store should not have runtime commands
                 testSpec().nativeType().addArgs("--mac-app-store", "--jlink-options", "--bind-services")
                         .error("ERR_MissingJLinkOptMacAppStore", "--strip-native-commands"),
@@ -658,21 +973,62 @@ public final class ErrorTest {
                 new ArgumentGroup("--app-version", "2.0"),
                 new ArgumentGroup("--name", "foo"),
                 new ArgumentGroup("--mac-app-store")
-        ).map(argGroup -> {
-            return testSpec().noAppDesc().addArgs(argGroup.asArray()).addArgs("--app-image", Token.APP_IMAGE.token())
-                    .error("ERR_InvalidOptionWithAppImageSigning", argGroup.arg());
-         // It should bail out with the same error message regardless of `--mac-sign` option.
-        }).mapMulti(ErrorTest::duplicateForMacSign).toList());
+        ).flatMap(argGroup -> {
+            var withoutSign = testSpec()
+                    .noAppDesc()
+                    .addArgs(argGroup.asArray())
+                    .addArgs("--app-image", Token.APP_IMAGE.token());
+
+            var withSign = withoutSign.copy().addArgs("--mac-sign");
+
+            withoutSign.error("error.app-image.mac-sign.required");
+
+            // It should bail out with the same error message regardless of `--mac-sign` option.
+            return Stream.of(withoutSign, withSign).map(builder -> {
+                return builder.error("ERR_InvalidOptionWithAppImageSigning", argGroup.arg());
+            });
+
+        }).map(TestSpec.Builder::create).toList());
 
         testCases.addAll(createMutuallyExclusive(
                 new ArgumentGroup("--mac-signing-key-user-name", "foo"),
                 new ArgumentGroup("--mac-app-image-sign-identity", "bar")
         ).mapMulti(ErrorTest::duplicateForMacSign).toList());
 
-        testCases.addAll(createMutuallyExclusive(
-                new ArgumentGroup("--mac-signing-key-user-name", "foo"),
-                new ArgumentGroup("--mac-installer-sign-identity", "bar")
-        ).map(TestSpec.Builder::nativeType).mapMulti(ErrorTest::duplicateForMacSign).toList());
+        for (var packageType : PackageType.MAC) {
+            testCases.addAll(createMutuallyExclusive(
+                    new ArgumentGroup("--mac-signing-key-user-name", "foo"),
+                    new ArgumentGroup("--mac-installer-sign-identity", "bar")
+            ).map(builder -> {
+                return builder.type(packageType);
+            }).mapMulti(ErrorTest::duplicateForMacSign).map(testCase -> {
+                if (packageType != PackageType.MAC_PKG) {
+                    /*
+                     * This is a bit tricky.
+                     * The error output should also contain
+                     *
+                     *  Error: Option [--mac-installer-sign-identity] is not valid with type [dmg]" error message.
+                     *
+                     * The order of errors is defined by the order of options on the command line causing them.
+                     * If "--mac-installer-sign-identity" goes before "--mac-signing-key-user-name", the error output will be:
+                     *
+                     *  Error: Option [--mac-installer-sign-identity] is not valid with type [dmg]
+                     *  Error: Mutually exclusive options [--mac-signing-key-user-name] and [--mac-installer-sign-identity]
+                     *
+                     * otherwise errors in the output will be in reverse order.
+                     */
+                    var expectedMessages = new ArrayList<>(testCase.expectedMessages());
+                    var invalidTypeOption = makeError("ERR_InvalidTypeOption", "--mac-installer-sign-identity", packageType.getType());
+                    if (testCase.addArgs().indexOf("--mac-installer-sign-identity") < testCase.addArgs().indexOf("--mac-signing-key-user-name")) {
+                        expectedMessages.addFirst(invalidTypeOption);
+                    } else {
+                        expectedMessages.add(invalidTypeOption);
+                    }
+                    testCase = testCase.copyWithExpectedMessages(expectedMessages);
+                }
+                return testCase;
+            }).toList());
+        }
 
         return toTestArgs(testCases.stream());
     }
@@ -707,8 +1063,7 @@ public final class ErrorTest {
         final var signingId = "foo";
 
         final List<CannedFormattedString> errorMessages = new ArrayList<>();
-        errorMessages.add(makeError(JPackageStringBundle.MAIN.cannedFormattedString(
-                "error.cert.not.found", "Developer ID Application: " + signingId, "")));
+        errorMessages.add(makeError("error.cert.not.found", "Developer ID Application: " + signingId, ""));
 
         final var cmd = JPackageCommand.helloAppImage()
                 .ignoreDefaultVerbose(true)
@@ -720,9 +1075,9 @@ public final class ErrorTest {
             errorMessages.stream()
                     .map(CannedFormattedString::getValue)
                     .map(TKit::assertTextStream)
-                    .map(TKit.TextStreamVerifier::negate).forEach(cmd::validateOutput);
+                    .map(TKit.TextStreamVerifier::negate).forEach(cmd::validateErr);
         } else {
-            cmd.validateOutput(errorMessages.toArray(CannedFormattedString[]::new));
+            cmd.validateErr(errorMessages.toArray(CannedFormattedString[]::new));
         }
 
         cmd.execute(1);
@@ -750,12 +1105,12 @@ public final class ErrorTest {
     }
 
     private static void macInvalidRuntime(Consumer<TestSpec> accumulator) {
-        var runtimeWithBinDirErr = makeError(JPackageStringBundle.MAIN.cannedFormattedString(
+        var runtimeWithBinDirErr = makeError(
                 "error.invalid-runtime-image-bin-dir", JPackageCommand.cannedArgument(cmd -> {
                     return Path.of(cmd.getArgumentValue("--runtime-image"));
-                }, Token.JAVA_HOME.token())));
-        var runtimeWithBinDirErrAdvice = makeAdvice(JPackageStringBundle.MAIN.cannedFormattedString(
-                "error.invalid-runtime-image-bin-dir.advice", "--mac-app-store"));
+                }, Token.JAVA_HOME.token()));
+        var runtimeWithBinDirErrAdvice = makeAdvice(
+                "error.invalid-runtime-image-bin-dir.advice", "--mac-app-store");
 
         Stream.of(
                 testSpec().nativeType().addArgs("--mac-app-store", "--runtime-image", Token.JAVA_HOME.token())
@@ -795,10 +1150,10 @@ public final class ErrorTest {
         }
 
         private CannedFormattedString expectedErrorMsg() {
-            return makeError(JPackageStringBundle.MAIN.cannedFormattedString(
+            return makeError(
                     "error.invalid-runtime-image-missing-file", JPackageCommand.cannedArgument(cmd -> {
                         return Path.of(cmd.getArgumentValue("--runtime-image"));
-                    }, runtimeDir.token()), missingFile));
+                    }, runtimeDir.token()), missingFile);
         }
     }
 
@@ -869,22 +1224,14 @@ public final class ErrorTest {
         );
     }
 
-    private static void defaultInit(JPackageCommand cmd, List<CannedFormattedString> expectedMessages) {
-
-        // Disable default logic adding `--verbose` option
-        // to jpackage command line.
-        // It will affect jpackage error messages if the command line is malformed.
-        cmd.ignoreDefaultVerbose(true);
-
-        // Ignore external runtime as it will interfere
-        // with jpackage arguments in this test.
-        cmd.ignoreDefaultRuntime(true);
-
-        cmd.validateOutput(expectedMessages.toArray(CannedFormattedString[]::new));
-    }
-
-    private static <T> Collection<Object[]> toTestArgs(Stream<T> stream) {
-        return stream.filter(v -> {
+    private static Collection<Object[]> toTestArgs(Stream<?> stream) {
+        return stream.map(v -> {
+            if (v instanceof TestSpec.Builder builder) {
+                return builder.create();
+            } else {
+                return v;
+            }
+        }).filter(v -> {
             if (v instanceof TestSpec ts) {
                 return ts.isSupported();
             } else {
@@ -895,8 +1242,8 @@ public final class ErrorTest {
         }).toList();
     }
 
-    private static Collection<Object[]> fromTestSpecBuilders(Stream<TestSpec.Builder> stream) {
-        return toTestArgs(stream.map(TestSpec.Builder::create));
+    private static Collection<Object[]> toTestArgs(Collection<?> col) {
+        return toTestArgs(col.stream());
     }
 
     private static String adjustTextStreamVerifierArg(String str) {
@@ -904,4 +1251,40 @@ public final class ErrorTest {
     }
 
     private static final Pattern LINE_SEP_REGEXP = Pattern.compile("\\R");
+
+    private final class SignEnvMock {
+
+        enum SingleCertificateKeychain {
+            FOO(CertificateType.CODE_SIGN),
+            BAR(CertificateType.INSTALLER),
+            ;
+
+            SingleCertificateKeychain(CertificateType certificateType) {
+                this.keychain = KeychainWithCertsSpec.build()
+                        .name(name().toLowerCase() + ".keychain")
+                        .addCert(CertificateRequest.build()
+                                .userName(name().toLowerCase())
+                                .type(Objects.requireNonNull(certificateType)))
+                        .create();
+            }
+
+            static List<KeychainWithCertsSpec> signingEnv() {
+                return Stream.of(values()).map(v -> {
+                    return v.keychain;
+                }).toList();
+            }
+
+            CertificateType certificateType() {
+                return keychain.certificateRequests().getFirst().type();
+            }
+
+            ResolvedKeychain keychain() {
+                return new ResolvedKeychain(keychain).toMock(VALUE.env());
+            }
+
+            private final KeychainWithCertsSpec keychain;
+        }
+
+        static final MacSignMockUtils.SignEnv VALUE = new MacSignMockUtils.SignEnv(SingleCertificateKeychain.signingEnv());
+    }
 }
